tests/NormalTests/paczka1/fuzzy1/84832400.err
Error in line 6: oL1JKSE6KFS S291 -2,1
Error in line 5: oL1JKSE6KFS S291 37,2
Error in line 14: Ea2qJjIS14I106,3
Error in line 10: oL1JKSE6KFS S14 23,8
Error in line 8: Ea2qJj S14 80,5
Error in line 22: Opu6GYjO5 S291 2N5,9
